<resources>
    <string name="app_name">QuizzardApp</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_add_button">Main Add Button</string>
    <string name="tags">Tags</string>
    <string name="enter_title">Enter Title</string>
    <string name="write_your_content_here">Write your content here</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="enter_definition_back">Enter Definition (Back)</string>
    <string name="enter_term_front">Enter Term (Front)</string>
    <string name="notes">Notes</string>
    <string name="flashcards">Flashcard Sets</string>
    <string name="exams">Exams</string>
    <string name="no_notes_found">No Notes Found \n Press the add button to add one!</string>
    <string name="no_sets_found">No Flashcard Sets found \n Press the add button to add one!</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="learn">Learn</string>
    <string name="note">Note</string>
    <string name="flashcard_set">Flashcard Set</string>
    <string name="exam">Exam</string>
    <string name="tap_the_card_to_flip_it">Tap the card to flip it</string>
    <string name="no_exams_found">No Exams found\nPress the add button to add one!</string>
    <string name="question">Question</string>
    <string name="enter_question">Enter Question</string>
    <string name="answer">Answer</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="questions">See Questions</string>
    <string name="take_test">Take Exam</string>
    <string name="calendar">Calendar</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="add_flashcard">Add Flashcard</string>
    <string name="add_question">Add Question</string>
    <string name="event_name">Event Name</string>
    <string name="event_time">Event Time</string>
    <string name="add_event">Add Event</string>
    <string name="whole_day">Whole Day</string>
    <string name="select_time">Select Time</string>
    <string name="notify_me">Notify me</string>
    <string name="schedule">Schedule</string>
    <string name="quizzardapp">QuizzardApp</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="add_schedule">Add Schedule</string>
</resources>