<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.calendar.DayViewActivity">

    <include layout="@layout/common_toolbar"
        android:id="@+id/toolbarIncl"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <EditText
            android:id="@+id/eventName"
            android:hint="@string/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            />

        <CheckBox
            android:id="@+id/wholeDayCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole_day" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="?android:attr/editTextBackground"
            android:text="@string/select_time"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/notificationCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_me"
            android:checked="true"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addEventButton"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            />

    </LinearLayout>

</LinearLayout>