<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/calendarMonthHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Month"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textAlignment="center"
        />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/monthGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        >


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mondayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            android:layout_marginHorizontal="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:gravity="center"
                android:text="@string/mon"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tuesdayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            android:layout_marginHorizontal="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tue"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/wednesdayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            android:layout_marginHorizontal="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:gravity="center"
                android:text="@string/wed"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/thursdayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            android:layout_marginHorizontal="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thu"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fridayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            android:layout_marginHorizontal="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:gravity="center"
                android:text="@string/fri"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/saturdayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            android:layout_marginHorizontal="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:gravity="center"
                android:text="@string/sat"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sundayCard"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginHorizontal="2dp"
            android:backgroundTint="@color/md_theme_surfaceContainer"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@color/md_theme_onSurfaceVariant"
                />
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>