<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.flashcards.EditFlashcardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include layout="@layout/common_toolbar"
            android:id="@+id/toolbarIncl"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/md_theme_surfaceContainerLow"
            android:layout_marginVertical="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term"
                        android:textColor="@color/md_theme_onSurfaceVariant"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <EditText
                    android:id="@+id/flashcardTerm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/enter_term_front"
                    android:inputType="text"
                    android:autofillHints="text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/definition"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_onSurfaceVariant"
                    />

                <EditText
                    android:id="@+id/flashcardDefinition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="text"
                    android:backgroundTint="#00000000"
                    android:hint="@string/enter_definition_back"
                    android:inputType="text"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="12dp"
            android:backgroundTint="@color/md_theme_tertiary"
            android:textColor="@color/md_theme_onTertiary"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>