<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sets.ViewFlashcardSetActivity"
    android:orientation="vertical"
    >

    <include layout="@layout/common_toolbar"
        android:id="@+id/toolbarIncl" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takeExamButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_test"
            app:icon="@drawable/icon_book"
            android:layout_marginTop="12dp"
            android:textAlignment="viewStart"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/questionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            app:icon="@drawable/icon_page"
            android:layout_marginTop="12dp"
            android:textAlignment="viewStart"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addQuestionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            app:icon="@drawable/icon_add"
            android:layout_marginTop="12dp"
            android:textAlignment="viewStart"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Questions in this set:"
        android:textAlignment="center"
        android:textSize="14sp"
        />

    <LinearLayout
        android:id="@+id/questionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_scrollFlags="snap"
        />

</LinearLayout>
